--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -20,6 +20,7 @@
         android:layout_above="@+id/button"
         android:layout_below="@+id/map"
         android:text="Share something"
+        android:textColor="#ffb0b0b0"
         android:onClick="clearText"/>
 
     <Button
