--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -26,6 +26,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:onClick="clickPost"
         android:text="Post"
         android:id="@+id/post_button"
         android:background="#ffffc107"
