--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -5,8 +5,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.conor.project.PostActivity">
-
-
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
         android:layout_height="180dp" android:id="@+id/map" tools:context=".MapsActivity"
@@ -26,12 +24,23 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:onClick="clickPost"
         android:text="Post"
+        android:onClick="clickPost"
         android:id="@+id/post_button"
         android:background="#ffffc107"
         android:textColor="#ff3f0000"
-        android:layout_below ='@+id/editText' />
+        android:layout_below ='@+id/editText'/>
+
+
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:onClick="clickPhoto"
+        android:src="@drawable/camerax"
+        android:id="@+id/photoButton"
+        android:layout_alignTop="@+id/editText"
+        android:layout_alignRight="@+id/editText"
+        android:layout_alignEnd="@+id/editText" />
 
 </RelativeLayout>
 
