Photo display and retrieval fixes, time slider changes

--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -10,9 +10,11 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_gravity="center_vertical"
+        android:src="@drawable/photo"
         android:visibility="gone"/>
 
     <LinearLayout
+        android:id="@+id/popuptext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
