--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -10,6 +10,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" >
 
+
         <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -43,7 +44,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:orientation="vertical" >
+            android:background="#FFFFFF"
+            android:orientation="horizontal" >
 
             <Button
                 android:id="@+id/button1"
@@ -51,9 +53,22 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:layout_alignParentBottom="true"
-                android:text="Post Message"
+                android:text="Post"
+                android:textColor="#FFFFFF"
                 android:background="#FFC107"
+                android:layout_marginRight="1dp"
                 android:onClick="postMessage"/>
+            <Button
+                android:id="@+id/refreshButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_alignParentBottom="true"
+                android:text="Refresh"
+                android:textColor="#FFFFFF"
+                android:background="#FFC107"
+                android:layout_marginLeft="1dp"
+                android:onClick="refreshMap"/>
 
 
         </LinearLayout>
