Added refresh function. Fixed map population

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -67,7 +67,7 @@
                 android:textColor="#FFFFFF"
                 android:background="#FFC107"
                 android:layout_marginLeft="1dp"
-                android:onClick="refreshMap"/>
+                android:onClick="refreshButton"/>
 
 
         </LinearLayout>
